# Desafio-Python-Web-Scraping

./: .gitignore  README.md
scrapy/: joismar_airbnb.json  joismar_airbnb_resumo.json  joismar_olhardigital.json  pyproject.toml  requirements.txt  scrapy.cfg
scrapy/scraper/: settings.py
scrapy/scraper/spiders/: airbnb.py  mercadolivre.py.old  olhardigital.py
scrapy/scrapper/: settings.py
scrapy/scrapper/spiders/: airbnb.py  olhardigital.py
selenium/: docker-compose.yml  joismar_airbnb2.json  joismar_airbnb2_resumo.json  joismar_mercadolivre.json  logger.py  main_airbnb.py  main_mercadolivre.py  pyproject.toml  requirements.txt
