[tool.poetry]
name = "desafio-scrapy"
version = "0.1.0"
description = ""
authors = ["Joismar <joismar@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Scrapy = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
